force-app/main/default/objects/custom_create298__c/custom_create298__c.object-meta.xml
<CustomObject>
    <label>Custom created object298</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects298</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>