force-app/main/default/objects/custom_create298__c/fields/custom_create_298field554__c.field-meta.xml
<CustomField>
    <fullName>custom_create_298field554__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 298field554</label>
    <type>Checkbox</type>
</CustomField>